--- a/leetcode_everyday_challenge.ipynb
+++ b/leetcode_everyday_challenge.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 455 Assign Cookies\n",
+    "# 455 Assign Cookies(greedy)\n",
     "https://leetcode.com/problems/assign-cookies/\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +38,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Two Sum\n",
+    "# 1 Two Sum(pointers or hashmap)\n",
     "https://leetcode.com/problems/two-sum/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# uses pointers\n",
     "def twoSum(nums, target):\n",
     "        \"\"\"\n",
     "        :type nums: List[int]\n",
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
        "[0, 1]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,31 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def twoSum(nums, target):\n",
-    "        \"\"\"\n",
-    "        :type nums: List[int]\n",
-    "        :type target: int\n",
-    "        :rtype: List[int]\n",
-    "        \"\"\"\n",
-    "        ptr1=0\n",
-    "        ptr2=len(nums)-1\n",
-    "        while ptr1<ptr2:\n",
-    "            if nums[ptr1]+nums[ptr2]==target:\n",
-    "                return [ptr1,ptr2]\n",
-    "            elif nums[ptr1]+nums[ptr2]>target:\n",
-    "                ptr2-=1\n",
+    "class Solution(object):\n",
+    "    def twoSum(self, nums, target):\n",
+    "        dic ={}\n",
+    "        for i,num in enumerate(nums):\n",
+    "            result = target-num\n",
+    "            if result in dic:\n",
+    "                return [i,dic[result]]\n",
     "            else:\n",
-    "                ptr1+=1\n",
-    "                "
+    "                dic[num]=i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +114,7 @@
        "[1, 3]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 695. Max Area of Island\n",
+    "# 695. Max Area of Island （search uses DFS)\n",
     "https://leetcode.com/problems/max-area-of-island/"
    ]
   },
@@ -268,6 +262,34 @@
    "source": [
     "l=[1,2,3,4,5,6,7,8,9,10]\n",
     "print(l[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 121. Best Time to Buy and Sell Stock (dynamic programming)\n",
+    "https://leetcode.com/problems/best-time-to-buy-and-sell-stock/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def maxProfit(self, prices):\n",
+    "        \"\"\"\n",
+    "        :type prices: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        profit=0\n",
+    "        buy_price=float('-inf')\n",
+    "        for price in prices:\n",
+    "            buy_price=max(buy_price,-price)\n",
+    "            profit=max(profit,buy_price+price)\n",
+    "        return profit"
    ]
   },
   {
