review binary tree

--- a/leetcode_everyday_challenge.ipynb
+++ b/leetcode_everyday_challenge.ipynb
@@ -966,6 +966,521 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insertion sort\n",
+    "def insert_sort(lists):\n",
+    "    for i in range(1,len(lists)):\n",
+    "        item_to_insert = lists[i]\n",
+    "        for j in range(i-1,-2,-1):\n",
+    "            if item_to_insert<lists[j]:\n",
+    "                lists[j+1]=lists[j]\n",
+    "            else:\n",
+    "                break\n",
+    "        lists[j+1] = item_to_insert\n",
+    "    return lists\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(insert_sort([8,10,5,2,1,7,9]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mergesort\n",
+    "def mergesort(lists):\n",
+    "    if len(lists)<=1:\n",
+    "        return lists\n",
+    "    middle = len(lists)//2\n",
+    "    left_list=[]\n",
+    "    right_list=[]\n",
+    "    for i in lists[:middle]:\n",
+    "        if i<=lists[middle]:\n",
+    "            left_list.append(i)\n",
+    "        else:\n",
+    "            right_list.append(i)\n",
+    "    for i in lists[middle+1:]:\n",
+    "        if i<=lists[middle]:\n",
+    "            left_list.append(i)\n",
+    "        else:\n",
+    "            right_list.append(i)\n",
+    "    print(left_list,right_list)\n",
+    "    return mergesort(left_list)+[lists[middle]]+mergesort(right_list)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 2, 19, 8, 24, 11, 33, 31, 6, 22, 29, 5, 32, 18, 9, 28, 16, 17, 7, 10, 23, 34, 13, 15, 12, 21, 4, 30, 3, 27, 14, 26, 1, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = list(range(1,35))\n",
+    "from random import shuffle\n",
+    "shuffle(lists)\n",
+    "print(lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 8, 11, 6, 5, 9, 16, 7, 10, 13, 15, 12, 4, 3, 14, 1] [20, 19, 24, 33, 31, 22, 29, 32, 18, 28, 23, 34, 21, 30, 27, 26, 25]\n",
+      "[2, 8, 6, 5, 9, 7, 4, 3, 1] [11, 16, 13, 15, 12, 14]\n",
+      "[2, 8, 6, 5, 7, 4, 3, 1] []\n",
+      "[2, 6, 5, 4, 3, 1] [8]\n",
+      "[2, 3, 1] [6, 5]\n",
+      "[2, 1] []\n",
+      "[] [2]\n",
+      "[] [6]\n",
+      "[11, 13, 12, 14] [16]\n",
+      "[11] [13, 14]\n",
+      "[13] []\n",
+      "[] [20, 19, 24, 33, 31, 22, 29, 32, 28, 23, 34, 21, 30, 27, 26, 25]\n",
+      "[20, 19, 24, 22, 23, 21, 27, 26, 25] [33, 31, 29, 32, 34, 30]\n",
+      "[20, 19, 22, 21] [24, 27, 26, 25]\n",
+      "[20, 19, 21] []\n",
+      "[] [20, 21]\n",
+      "[20] []\n",
+      "[24, 25] [27]\n",
+      "[24] []\n",
+      "[31, 29, 30] [33, 34]\n",
+      "[] [31, 30]\n",
+      "[] [31]\n",
+      "[33] []\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergesort(lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# two sorted array\n",
+    "def two_list(a,b,k):\n",
+    "    c=sorted(a+b)\n",
+    "    print(c)\n",
+    "    return c[k-1]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 8]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1, 3, 5]\n",
+    "l2 = [2, 4, 6, 8]\n",
+    "print(two_list(l1,l2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def two_list(a,b,k):\n",
+    "    len_a = len(a)\n",
+    "    print(len_a)\n",
+    "    len_b = len(b)\n",
+    "    print(len_b)\n",
+    "    assert k<=(len_a+len_b),\"k cannot be greater than the entire length of a+b\"\n",
+    "    assert len_a !=0 and len_b!=0,\"the two lists cannot be empty at the same time\"\n",
+    "    sorted_list = [0]*(len_a+len_b)\n",
+    "    print(sorted_list)\n",
+    "    i=j=0\n",
+    "    ptr=0\n",
+    "    while(i<len_a and j < len_b):\n",
+    "        if a[i]<=b[j]:\n",
+    "            sorted_list[ptr]=a[i]\n",
+    "            i+=1\n",
+    "        else:\n",
+    "            sorted_list[ptr]=b[j]\n",
+    "            j+=1\n",
+    "        ptr+=1\n",
+    "    \n",
+    "    while i<len_a:\n",
+    "        sorted_list[ptr]=a[i]\n",
+    "        i+=1\n",
+    "        ptr+=1\n",
+    "    while j<len_b:\n",
+    "        sorted_list[ptr]=b[j]\n",
+    "        j+=1\n",
+    "        ptr+=1\n",
+    "    print(sorted_list)\n",
+    "    return sorted_list[k-1]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "[0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 2, 3, 4, 5, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_list(l1,l2,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_list([1,2,3,4,5],[6,7,8,9,10],10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "the two lists cannot be empty at the same time",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-74-6d0ea524ea10>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtwo_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-71-e68b704795bd>\u001b[0m in \u001b[0;36mtwo_list\u001b[1;34m(a, b, k)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen_b\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32massert\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m<=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen_a\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mlen_b\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"k cannot be greater than the entire length of a+b\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[1;32massert\u001b[0m \u001b[0mlen_a\u001b[0m \u001b[1;33m!=\u001b[0m\u001b[1;36m0\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen_b\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"the two lists cannot be empty at the same time\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0msorted_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen_a\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mlen_b\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msorted_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: the two lists cannot be empty at the same time"
+     ]
+    }
+   ],
+   "source": [
+    "two_list([],[],0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class test_two_lists(unittest.TestCase):\n",
+    "    def test_twolists(self):\n",
+    "        result = two_list(l1,l2,3)\n",
+    "        print(self.assertEqual(result,3))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while(i<len_a and j < len_b):\n",
+    "        if a[i]<=b[j]:\n",
+    "            sorted_list[ptr]=a[i]\n",
+    "            i+=1\n",
+    "        else:\n",
+    "            sorted_list[ptr]=b[j]\n",
+    "            j+=1\n",
+    "        ptr+=1\n",
+    "    \n",
+    "    while i<len_a:\n",
+    "        sorted_list[ptr]=a[i]\n",
+    "        i+=1\n",
+    "        ptr+=1\n",
+    "    while j<len_b:\n",
+    "        sorted_list[ptr]=b[j]\n",
+    "        j+=1\n",
+    "        ptr+=1\n",
+    "    print(sorted_list)\n",
+    "    return sorted_list[k-1]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def two_lists(a,b,k):\n",
+    "    len_a=len(a)\n",
+    "    len_b=len(b)\n",
+    "    assert k<=(len_a+len_b),\"k must <=len_a+len_b\"\n",
+    "    sorted_list=[]\n",
+    "    aptr=bptr=0\n",
+    "    while(aptr<len_a and bptr<len_b):\n",
+    "        if a[aptr]<=b[bptr]:\n",
+    "            print(\"aptr\",a[aptr])\n",
+    "            sorted_list.append(a[aptr])\n",
+    "            aptr+=1\n",
+    "        else:\n",
+    "            print(\"bptr\",b[bptr])\n",
+    "            sorted_list.append(b[bptr])\n",
+    "            bptr+=1\n",
+    "            \n",
+    "    print(\"a_Ptr:\",aptr)\n",
+    "    print(\"b_ptr:\",bptr)\n",
+    "    if aptr<len_a:\n",
+    "        for element in a[aptr:]:\n",
+    "            sorted_list.append(element)\n",
+    "    \n",
+    "    if bptr<len_b:\n",
+    "        for element in b[bptr:]:\n",
+    "            sorted_list.append(element)\n",
+    "    print(sorted_list)\n",
+    "    return sorted_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aptr 1\n",
+      "bptr 1\n",
+      "bptr 2\n",
+      "aptr 3\n",
+      "bptr 4\n",
+      "aptr 5\n",
+      "bptr 6\n",
+      "bptr 8\n",
+      "aptr 9\n",
+      "aptr 11\n",
+      "a_Ptr: 5\n",
+      "b_ptr: 5\n",
+      "[1, 1, 2, 3, 4, 5, 6, 8, 9, 11, 15, 30]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 4, 5, 6, 8, 9, 11, 15, 30]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [1, 3, 5,9,11]\n",
+    "l2 = [1,2, 4, 6, 8,15,30]\n",
+    "two_lists(l1,l2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=5\n",
+    "len(bin(5))\n",
+    "b=bin(5)\n",
+    "(1<<1)|1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 94. Binary Tree Inorder Traversal\n",
+    "https://leetcode.com/problems/binary-tree-inorder-traversal/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode(object):\n",
+    "#     def __init__(self, val=0, left=None, right=None):\n",
+    "#         self.val = val\n",
+    "#         self.left = left\n",
+    "#         self.right = right\n",
+    "class Solution(object):\n",
+    "    def inorderTraversal(self, root):\n",
+    "        \"\"\"\n",
+    "        :type root: TreeNode\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        return self.inorderTraversal(root.left)+[root.val]+self.inorderTraversal(root.right) if root else []"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
