--- a/leetcode_everyday_challenge.ipynb
+++ b/leetcode_everyday_challenge.ipynb
@@ -1481,6 +1481,284 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abab\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=\"babad\"\n",
+    "temp=s[0:4]\n",
+    "print(temp[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# not a good solution, runs slow.\n",
+    "def longestPalindrome(s):\n",
+    "    \"\"\"\n",
+    "    :type s: str\n",
+    "    :rtype: str\n",
+    "    \"\"\"\n",
+    "    max_length=0\n",
+    "    result=\"\"\n",
+    "    if len(s)<2:\n",
+    "        return s\n",
+    "    if s==s[::-1]:\n",
+    "        return s\n",
+    "    len_s=len(s)\n",
+    "    for i in range (len_s):\n",
+    "        for j in range(i,len_s):\n",
+    "            if s[i]==s[j]:\n",
+    "                temp=s[i:j+1]\n",
+    "                if s[i:j+1]==temp[::-1]:\n",
+    "                    new_length=j-i+1\n",
+    "                    if max_length < new_length:\n",
+    "                        max_length=new_length\n",
+    "                        result= s[i:j+1]\n",
+    "    return result\n",
+    "                        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bab'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longestPalindrome(\"babad\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bb'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longestPalindrome(\"abb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bcb'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longestPalindrome(\"eabcb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validPalindrome(s):\n",
+    "        \"\"\"\n",
+    "        :type s: str\n",
+    "        :rtype: bool\n",
+    "        \"\"\"\n",
+    "        if not s:\n",
+    "            return False\n",
+    "        \n",
+    "        len_s = len(s)\n",
+    "        \n",
+    "        if len_s==1:\n",
+    "            return True\n",
+    "        \n",
+    "        mistake = 0\n",
+    "        flag = True\n",
+    "        if len_s % 2==0:\n",
+    "            i=int(len_s/2-1)\n",
+    "            j=int(len_s/2)\n",
+    "        else:\n",
+    "            i=j=int(len_s//2)\n",
+    "        while (i>=0 and j<len_s):\n",
+    "            \n",
+    "            print(\"i\",i)\n",
+    "            print(\"j\",j)\n",
+    "            print(\"s[i]\",s[i])\n",
+    "            print(\"s[j]\",s[j])\n",
+    "            if(s[i]!=s[j]):\n",
+    "                mistake+=1 \n",
+    "                print(\"mistake:\",mistake)\n",
+    "            if mistake>1:\n",
+    "                return False\n",
+    "            i-=1\n",
+    "            j+=1\n",
+    "        \n",
+    "        return flag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i 1\n",
+      "j 1\n",
+      "s[i] b\n",
+      "s[j] b\n",
+      "i 0\n",
+      "j 2\n",
+      "s[i] a\n",
+      "s[j] c\n",
+      "mistake: 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validPalindrome(\"abc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 695. Max Area of Island\n",
+    "https://leetcode.com/problems/max-area-of-island/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def maxAreaOfIsland(self, grid):\n",
+    "        \"\"\"\n",
+    "        :type grid: List[List[int]]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        direction=[-1,0,1,0,-1]\n",
+    "        local_area=max_area=0\n",
+    "        rows=len(grid)\n",
+    "        cols=len(grid[0])\n",
+    "        for i in range(rows):\n",
+    "            for j in range(cols):\n",
+    "                if grid[i][j] == 1:\n",
+    "                    local_area=1\n",
+    "                    grid[i][j]=0\n",
+    "                    stack=[]\n",
+    "                    stack.append([i,j])\n",
+    "                    while stack:\n",
+    "                        r,c=stack.pop(-1)\n",
+    "                        for l in range(4):\n",
+    "                            x=r+direction[l]\n",
+    "                            y=c+direction[l+1]\n",
+    "                            if(x>=0 and y>=0 and x<rows and y<cols and grid[x][y]==1):\n",
+    "                                grid[x][y]=0\n",
+    "                                local_area+=1\n",
+    "                                stack.append([x,y])\n",
+    "                    max_area=max(max_area,local_area)\n",
+    "        return max_area"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 547. Number of Provinces\n",
+    "https://leetcode.com/problems/number-of-provinces/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def findCircleNum(self, isConnected):\n",
+    "        \"\"\"\n",
+    "        :type isConnected: List[List[int]]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        n =len(isConnected)\n",
+    "        visited = [False]*n\n",
+    "        nums=0\n",
+    "        def dfs(visited,isConnected,i):\n",
+    "            visited[i]=True\n",
+    "            for j in range(n):\n",
+    "                if isConnected[i][j]==1 and not visited[j]:\n",
+    "                    dfs(visited,isConnected,j)\n",
+    "        \n",
+    "        for i in range(n):\n",
+    "            if not visited[i]:\n",
+    "                dfs(visited,isConnected,i)\n",
+    "                nums+=1\n",
+    "        \n",
+    "        return nums"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 46. Permutations （backtracking）\n",
+    "https://leetcode.com/problems/permutations/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
