--- a/leetcode_everyday_challenge.ipynb
+++ b/leetcode_everyday_challenge.ipynb
@@ -1759,6 +1759,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def permute(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: List[List[int]]\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        \n",
+    "        def backtrack(first=0):\n",
+    "            if first == len(nums):\n",
+    "                result.append(nums[:])#important: nums[:] is a shallow copy of nums i.e. the nums modified not the original\n",
+    "            \n",
+    "            for i in range (first,len(nums)):\n",
+    "                nums[first],nums[i]=nums[i],nums[first]\n",
+    "                backtrack(first+1)\n",
+    "                nums[first],nums[i]=nums[i],nums[first]\n",
+    "       \n",
+    "        result = []\n",
+    "        backtrack()\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# another way to solve the problem:\n",
+    "class Solution(object):\n",
+    "    def permute(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: List[List[int]]\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        def backtrack(nums,path):\n",
+    "            if not nums:\n",
+    "                result.append(path)\n",
+    "            for x in range(len(nums)):\n",
+    "                backtrack(nums[:x]+nums[x+1:],path+[nums[x]])\n",
+    "        result=[]\n",
+    "        backtrack(nums,[])\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
