--- a/leetcode_everyday_challenge.ipynb
+++ b/leetcode_everyday_challenge.ipynb
@@ -2328,6 +2328,78 @@
     "            \n",
     "        return [column_table[x] for x in range(min_col,max_col+1)]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1570. Dot Product of Two Sparse Vectors\n",
+    "https://leetcode.com/problems/dot-product-of-two-sparse-vectors/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SparseVector:\n",
+    "    def __init__(self, nums: List[int]):\n",
+    "        self.hashtable={}\n",
+    "        for i,var in enumerate(nums):\n",
+    "            if var!=0:\n",
+    "                self.hashtable[i]=var\n",
+    "\n",
+    "    # Return the dotProduct of two sparse vectors\n",
+    "    def dotProduct(self, vec: 'SparseVector') -> int:\n",
+    "        self.result=0\n",
+    "        for i in self.hashtable:\n",
+    "            if i in vec.hashtable:\n",
+    "                self.result+=self.hashtable[i]*vec.hashtable[i]\n",
+    "        return self.result\n",
+    "\n",
+    "# Your SparseVector object will be instantiated and called as such:\n",
+    "# v1 = SparseVector(nums1)\n",
+    "# v2 = SparseVector(nums2)\n",
+    "# ans = v1.dotProduct(v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SparseVector:\n",
+    "    def __init__(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        \"\"\"\n",
+    "        self.vec1=nums\n",
+    "        \n",
+    "\n",
+    "    # Return the dotProduct of two sparse vectors\n",
+    "    def dotProduct(self, vec):\n",
+    "        \"\"\"\n",
+    "        :type vec: 'SparseVector'\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        # return sum([x*y for x,y in zip(self.vec1,vec.vec1)])\n",
+    "        return sum(list(map(lambda x,y: x*y,self.vec1,vec.vec1)))\n",
+    "        \n",
+    "\n",
+    "# Your SparseVector object will be instantiated and called as such:\n",
+    "# v1 = SparseVector(nums1)\n",
+    "# v2 = SparseVector(nums2)\n",
+    "# ans = v1.dotProduct(v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
