--- a/leetcode_everyday_challenge.ipynb
+++ b/leetcode_everyday_challenge.ipynb
@@ -2396,10 +2396,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4,5]\n",
+    "print(sum(l[2:3]))\n",
+    "print(sum(l[2:4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "j 3\n",
+      "0\n",
+      "jj 4\n",
+      "1\n",
+      "jj 4\n",
+      "2\n",
+      "jj 5\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subarraySum([1,2,3,4,5,6],6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "0\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "1\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "2\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "3\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "4\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "5\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "6\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "7\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "8\n",
+      "j 6\n",
+      "j 7\n",
+      "j 8\n",
+      "j 9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(10):\n",
+    "        if j>5:\n",
+    "            print('j',j)\n",
+    "            continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic={0:1,2:1}\n",
+    "if 3 in dic:\n",
+    "    print('0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 560. Subarray Sum Equals K\n",
+    "https://leetcode.com/problems/subarray-sum-equals-k/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def subarraySum(self, nums: List[int], k: int) -> int:\n",
+    "        hash_map={0:1}\n",
+    "        count=0\n",
+    "        cum_sum=0\n",
+    "        for i in range(len(nums)):\n",
+    "            cum_sum+=nums[i]\n",
+    "            sum_minus_k=cum_sum-k\n",
+    "            if sum_minus_k in hash_map:\n",
+    "                count+=hash_map[sum_minus_k]\n",
+    "            if cum_sum in hash_map:\n",
+    "                hash_map[cum_sum]+=1\n",
+    "            else:\n",
+    "                hash_map[cum_sum]=1\n",
+    "        \n",
+    "        return count"
+   ]
   }
  ],
  "metadata": {
